# CrossZero

./: CMakeLists.txt  backfield.c  backfield.h  frontfield.c  frontfield.h  game.c  game.h  gameheader.h  greatmind.c  greatmind.h  main.c  mainheader.h  menu.c  menu.h  player.c  player.h  ratetable.c  ratetable.h  settings.c  settings.h
